# BOLT

./: .gitignore  LICENSE  README.md
optimization/query_plans/: .gitignore  README.md  pyproject.toml
optimization/query_plans/bayes_lqo/imdb_postgres/: postgresql.conf
optimization/query_plans/bayes_lqo/initialization_data/: README.md
optimization/query_plans/bayes_lqo/lolbo/: info_transformer_vae_objective.py  latent_space_objective.py  lolbo.py
optimization/query_plans/bayes_lqo/lolbo_scripts/: info_transformer_vae_optimization.py  optimize.py  run_baoinit_CEB_1A10.sh
optimization/query_plans/bayes_lqo/oracle/: oracle.py
optimization/query_plans/bayes_lqo/training_data/: codec.py  log.py  planner.py
optimization/query_plans/bayes_lqo/utils/: set_seed.py
optimization/query_plans/bayes_lqo/vae/: model.py
optimization/query_plans/bayes_lqo/workload/: schema.py
optimization/query_plans/bayes_lqo/your_tasks/: your_blackbox_constraints.py  your_objective_functions.py
optimization/query_plans/query_plan_optimization/: constants.py
optimization/query_plans/query_plan_optimization/codec/: codec.py
optimization/query_plans/query_plan_optimization/imdb_postgres/: .gitignore  0_create_imdb.sql  1_restore.sh  Dockerfile  README.md
optimization/query_plans/query_plan_optimization/initialization_data/: ceb_3k_bao_initialization.csv  example_BOLT_samples.jsonl
optimization/query_plans/query_plan_optimization/logger/: log.py
optimization/query_plans/query_plan_optimization/lolbo/: latent_space_objective.py
optimization/query_plans/query_plan_optimization/lolbo_scripts/: PARALLEL_DATABASE_GUIDE.md  README_LOLBO_SETUP.md  optimize.py  (+5 more)
optimization/query_plans/tasks/: ceb_tasks.txt
(+56 files in other folders)
