[project]
name = "bayes-lqo"

version = "0.1.0"
description = "BOLT - Query join order optimization env"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bokeh>=3.6.0",
    "boto3>=1.35.32",
    "botorch>=0.12.0",
    "celery>=5.4.0",
    "fire>=0.7.0",
    "gpytorch>=1.13",
    "lightning>=2.4.0",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "networkx>=3.3",
    "numpy>=2.1.1",
    "peewee>=3.17.6",
    "psycopg2-binary>=2.9.9",
    "psycopg[binary]>=3.2.3",
    "pydot>=3.0.2",
    "sqlglot==18.15.0",
    "torch>=2.4.0",
    "tqdm>=4.66.5",
    "typer>=0.12.5",
    "wandb>=0.18.3",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
reportPossiblyUnboundVariable = false
reportPrivateImportUsage = false
reportArgumentType = false
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false
reportIncompatibleVariableOverride = false
reportGeneralTypeIssues = false
reportOptionalSubscript = false
reportReturnType = false
reportWildcardImportFromLibrary = false
reportOperatorIssue = false
reportCallIssue = false
reportRedeclaration = false
reportUnboundVariable = false
reportUndefinedVariable = false
reportMissingImports = false
reportSelfClsParameterName = false
reportAssignmentType = false
reportIncompatibleMethodOverride = false
reportOptionalIterable = false

